Test cumuler sprint 4 - 8